[governance] Fix proposal not scrolling on small height (#2045)

--- a/app/style/Governance.less
+++ b/app/style/Governance.less
@@ -90,6 +90,10 @@
   padding: 1em;
 }
 
+.proposal-list-wrapper {
+  height: 100%;
+}
+
 .proposal-list {
   margin-top: 20px;
   margin-left: 38px;
@@ -359,8 +363,9 @@
 }
 
 .proposal-details-text {
-  overflow: auto;
+  min-height:100%;
   margin-top: 20px;
+  margin-bottom: 80px;
   p {
     word-wrap: break-word;
   }
