--- a/app/style/Layout.less
+++ b/app/style/Layout.less
@@ -161,6 +161,7 @@
 }
 
 .tabbed-page-body.governance .tabbed-page-header > .tabs {
+  overflow-y: auto;
   left: unset;
   padding-left: 100px;
   margin-left: -63px;
@@ -176,6 +177,10 @@
       }
     }
   }
+}
+
+.tab-content .proposal-list {
+  margin-bottom: 60px;
 }
 
 .tabbed-page-header > .tabs {
